--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Angular Theme
 Theme URI: http://github.com/misfist
 Author: Pea
 Author URI: http://github.com/misfist
-Description: Wordpress theme built with Angularjs
+Description: Wordpress theme built with Angularjs and Rest API.
 Version: 0.1-dev
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
