--- a/partials/main.html
+++ b/partials/main.html
@@ -1,9 +1,25 @@
+<search-form></search-form>
+
+{{filter.s}}
+
+<ul class="category-list">
+    <li class="term" ng-repeat="category in categories">
+        <span ng-if="currentCategoryId == category.id" ng-bind-html="category.name"></span>
+        <a ng-if="currentCategoryId != category.id" href="category/{{category.id}}" ng-bind-html="category.name"></a>
+    </li>
+</ul>
+
 <ul class="post-list">
-    <li class="post" ng-repeat="post in posts">
+    <li class="post" ng-repeat="post in posts | filter:filter.s">
         <header class="post-header">
-            <h3 class="post-title"><a href="{{post.id}}">{{post.title.rendered}}</a></h3>
+            <h3 class="post-title"><a href="{{post.slug}}" ng-bind-html="post.title.rendered"></a></h3>
+            {{post.featured_image}}
+            <div class="post-image thumb"><img src="" ng-src="{{post.image.source_url}}" alt="{{post.image.title.rendered}}"></div>
         </header>
-        <div class="post-content">{{post.excerpt.rendered}}</div>
+        <div class="post-content" ng-bind-html="post.excerpt.rendered"></div>
         <footer class="post-footer"></footer>
     </li>
 </ul>
+
+<posts-nav-link prev-label="&laquo; Previous Page" next-label="Next Page &raquo;"></posts-nav-link>
+
