--- a/partials/main.html
+++ b/partials/main.html
@@ -3,7 +3,7 @@
 {{filter.s}}
 
 <ul class="category-list">
-    <li class="term" ng-repeat="category in categories">
+    <li class="term" ng-repeat="category in data.categories">
         <span ng-if="currentCategoryId == category.id" ng-bind-html="category.name"></span>
         <a ng-if="currentCategoryId != category.id" href="category/{{category.id}}" ng-bind-html="category.name"></a>
     </li>
