--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6072,6 +6072,24 @@ main:after {
   clear: both; }
 
 /* Layout */
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%; }
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px; }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #eeeeee; }
+
 .admin-bar .navbar-fixed-top {
   top: 30px; }
 
