--- a/partials/main.html
+++ b/partials/main.html
@@ -9,11 +9,13 @@
     </li>
 </ul>
 
+<h1 class="page-title">{{data.pageTitle}}</h1>
+
 <ul class="post-list">
-    <li class="post" ng-repeat="post in posts | filter:filter.s">
+    <li class="post" ng-repeat="post in data.posts | filter:filter.s">
         <header class="post-header">
             <h3 class="post-title"><a href="{{post.slug}}" ng-bind-html="post.title.rendered"></a></h3>
-            {{post.featured_image}}
+            Image: {{post.featured_image}}
             <div class="post-image thumb"><img src="" ng-src="{{post.image.source_url}}" alt="{{post.image.title.rendered}}"></div>
         </header>
         <div class="post-content" ng-bind-html="post.excerpt.rendered"></div>
