--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -1,3 +1,29 @@
+
+main {
+    @extend %clearfix;
+}
+
+/* Sticky footer styles
+-------------------------------------------------- */
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: $gray-lighter;
+}
+
+
 // If there is an admin bar push the nav down
 .admin-bar {
     .navbar-fixed-top {
@@ -6,10 +32,6 @@
 }
 
 .list-group {
-	width: 70%;
-	margin: 0 auto;
-}
-
-main {
-    @extend %clearfix;
+    width: 70%;
+    margin: 0 auto;
 }
