--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -1,9 +1,7 @@
 <div class="well">
 
-    <ul class="category-list">
-        <li class="term" ng-repeat="category in categories">
-            <a href="category/{{category.id}}" ng-bind-html="category.name"></a>
-        </li>
-    </ul>
+    <search-form></search-form>
+
+    <categories></categories>
 
 </div>
