--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -1,6 +1,8 @@
-.thumbnail img {
-	width: 100px;
+.thumbnail {
+	width: 25%;
 	height: auto;
+    float: left;
+    margin-right: 1em;
 }
 
 .rotate {
