--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 /* Components */
 @import 'components/common';
 @import 'components/forms';
+@import 'components/lists';
 
 /* Theme */
 @import 'theme/colors';
