--- a/partials/search-form.html
+++ b/partials/search-form.html
@@ -1,9 +1,11 @@
-<form ng-submit="search()" class="input-group well" role="search">
+<form ng-submit="search()" class="input-group" role="search">
     <!-- <label for="s" >Search</label> -->
     <input type="text" name="s" ng-model="filter.s" placeholder="Enter keyword" class="form-control" />
     <span class="input-group-btn">
         <input type="submit" value="Search" ng-model="searchText" class="btn btn-default" />
         <span class="glyphicon glyphicon-search"></span>
     </span>
+
+    {{filter.s}}
 
 </form>
