--- a/src/sass/util/_mixins.scss
+++ b/src/sass/util/_mixins.scss
@@ -30,8 +30,10 @@
 }
 
 // for semantic markup, a la http://blog.teamtreehouse.com/a-better-clearfix-with-sass
-%clearfix:after {
+%clearfix {
+    &:after {
     content: "";
     display: table;
     clear: both;
+    }
 }
