--- a/partials/main.html
+++ b/partials/main.html
@@ -2,16 +2,28 @@
 
     <h1 class="page-title">{{data.pageTitle}}</h1>
 
+    <carousel></carousel>
+    
     <ul class="post-list list-unstyled">
         <li class="post" ng-repeat="post in data.posts | filter:filter.s">
             <header class="post-header">
                 <h3 class="post-title"><a href="{{post.slug}}" ng-bind-html="post.title.rendered"></a></h3>
-                <div ng-if="post.featured_image_thumbnail_url" class="post-image thumb"><a href="{{post.slug}}"><img src="" ng-src="{{post.featured_image_thumbnail_url}}" alt="{{post.featured_image_thumbnail_title}}" class="thumbnail img-responsive"></a></div>
+                <div ng-if="post.featured_image_thumbnail_url" class="post-image thumb"><a href="#" data-toggle="modal" data-target="#lightbox" class="thumbnail"><img id="{{post.id}}" src="" ng-src="{{post.featured_image_thumbnail_url}}" alt="{{post.featured_image_thumbnail_title}}" class="img-responsive"></a></div>
             </header>
             <div class="post-content" ng-bind-html="post.excerpt.rendered"></div>
             <footer class="post-footer"><a href="{{post.slug}}" class="btn">Read More &raquo;</a></footer>
         </li>
     </ul>
+    <div id="lightbox" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <button type="button" class="close hidden" data-dismiss="modal" aria-hidden="true">×</button>
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="" alt="" />
+                </div>
+            </div>
+        </div>
+    </div>
 
     <posts-nav-link prev-label="&laquo; Previous Page" next-label="Next Page &raquo;"></posts-nav-link>
 </div>
