--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -5,6 +5,27 @@
     margin-right: 1em;
 }
 
+#lightbox {
+    .modal-content {
+        display: inline-block;
+        text-align: center;   
+    }
+
+    .close {
+        opacity: 1;
+        color: rgb(255, 255, 255);
+        background-color: rgb(25, 25, 25);
+        padding: 5px 8px;
+        border-radius: 30px;
+        border: 2px solid rgb(255, 255, 255);
+        position: absolute;
+        top: -15px;
+        right: -55px;
+        
+        z-index:1032;
+    }
+}
+
 .rotate {
     /* Safari */
     -webkit-transform: rotate(-90deg);
@@ -20,4 +41,16 @@
 
     /* Internet Explorer */
     filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+
+/*
+Original Bootstrap's CSS depends on empty href attributes to style cursors for several components (pagination, tabs etc.). But in AngularJS adding empty href attributes to link tags will cause unwanted route changes. This is why we need to remove empty href attributes from directive templates and as a result styling is not applied correctly.
+https://angular-ui.github.io/bootstrap/
+*/
+
+.nav, 
+.pagination, 
+.carousel, 
+.panel-title a { 
+    cursor: pointer;
 }
