--- a/partials/post.html
+++ b/partials/post.html
@@ -4,5 +4,5 @@
         <div class="post-image thumbnail"><img src="" ng-src="{{post.featured_image_thumbnail_full_url}}" alt="{{post.featured_image_thumbnail_title}}" class="img-responsive"></div>
     </header>
     <div class="post-content" ng-bind-html="post.content.rendered"></div>
-    <footer class="post-footer meta"><span class="text-muted"></span></footer>
+    <footer class="post-footer meta"><i class="icon-tag"></i> <span class="text-muted"></span></footer>
 </article>
